Code cleaned for release: added javadoc, adhering checkstyle