@@ -20,20 +20,50 @@ import com.google.common.collect.ImmutableList;
 import org.terasology.utilities.random.FastRandom;
 import org.terasology.utilities.random.Random;
 
-import java.util.*;
+import java.util.List;
+import java.util.Set;
+import java.util.HashSet;
+import java.util.LinkedList;
+
 
 /**
  * N-order Markov Chain implementation.
  * This is the user friendly version.
  *
  * If more control over the internal state is necessary, use {@link RawMarkovChain} instead.
+ * @param <S> The type of the states.
  *
- * @tparam S The type of the states.
- *
- * @since 31-10-2014
+ * @version 1.00
  * @author Linus van Elswijk
  */
 public class MarkovChain<S> extends MarkovChainBase {
+
+    // variables ////////////////////////////////////////////////////////
+
+    private static final String ALL_STATES_UNIQUE_MESSAGE =
+            "All objects in the state list should be unique.";
+
+    /**
+     * The states of the Markov Chain.
+     */
+    public final ImmutableList<S> states;
+
+    /**
+     * History of states ordered from least recent to most recent.
+     * history.first() is the nth previous state, where n={@link #order}
+     * history.last() is the current state.
+     */
+    private final List<S> history;
+
+    /**
+     * The state indices for the states in {@link #history},
+     * such that for all x: states.get(rawHistory(x)) == history(x)
+     */
+    private final List<Integer> rawHistory;
+
+    private final Random random;
+    private final RawMarkovChain rawMarkovChain;
+
 
     // 2nd order Markov Chain constructors //////////////////////////////
 
@@ -45,6 +75,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      Every element probabilities[x][y][z] determines the probability of transitioning
      *                      to state z, given current state y and previous state x.
      *                      The matrix must be cubical.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][][] transitionMatrix) {
         this(2, states, flatten(transitionMatrix));
@@ -59,6 +91,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      to state z, given current state y and previous state x.
      *                      The matrix must be cubical.
      * @param seed The seed for the random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][][] transitionMatrix, long seed) {
         this(2, states, flatten(transitionMatrix), seed);
@@ -73,6 +107,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      to state z, given current state y and previous state x.
      *                      The matrix must be cubical.
      * @param random The random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][][] transitionMatrix, Random random) {
         this(2, states, flatten(transitionMatrix), random);
@@ -88,6 +124,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      Every element probabilities[x][y] determines the probability of transitioning
      *                      to state y, given current state x.
      *                      The matrix must be square.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][] transitionMatrix) {
         this(1, states, flatten(transitionMatrix));
@@ -102,6 +140,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      to state y, given current state x.
      *                      The matrix must be square.
      * @param seed The seed for the random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][] transitionMatrix, long seed) {
         this(1, states, flatten(transitionMatrix), seed);
@@ -116,6 +156,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *                      to state y, given current state x.
      *                      The matrix must be square.
      * @param random The random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(List<S> states, float[][] transitionMatrix, Random random) {
         this(1, states, flatten(transitionMatrix), random);
@@ -135,6 +177,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      * @param transitionProbabilities The transition probabilities of length pow(nrOfStates, order + 1).
      *      The provided array should be a flattened n-dimensional array of probabilities, with
      *      n being the order of the markov chain.
+     *
+     * @since 1.00
      */
     public MarkovChain(int order, List<S> states, float[] transitionProbabilities) {
         this(order, states, transitionProbabilities, new FastRandom());
@@ -153,6 +197,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *      The provided array should be a flattened n-dimensional array of probabilities, with
      *      n being the order of the markov chain.
      * @param seed The seed for the random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(int order, List<S> states, float[] transitionProbabilities, long seed) {
         this(order, states, transitionProbabilities, new FastRandom(seed));
@@ -171,6 +217,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      *      The provided array should be a flattened n-dimensional array of probabilities, with
      *      n being the order of the markov chain.
      * @param random The random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(int order, List<S> states, float[] transitionProbabilities, Random random) {
         this(order, states, new RawMarkovChain(order, states.size(), transitionProbabilities), random);
@@ -187,6 +235,8 @@ public class MarkovChain<S> extends MarkovChainBase {
      * @param states The states in the chain.
      * @param rawMarkovChain The RawMarkovChain controlling the MarkovChain.
      * @param random The random number generator used for determining next states.
+     *
+     * @since 1.00
      */
     public MarkovChain(int order, List<S> states, RawMarkovChain rawMarkovChain, Random random) {
         super(order, states.size());
@@ -200,8 +250,8 @@ public class MarkovChain<S> extends MarkovChainBase {
         this.rawMarkovChain = rawMarkovChain;
         this.rawMarkovChain.normalizeProbabilities();
         this.random = random;
-        this.history = new LinkedList<S>();
-        this.rawHistory = new LinkedList<Integer>();
+        this.history = new LinkedList<>();
+        this.rawHistory = new LinkedList<>();
 
         resetHistory();
     }
@@ -211,39 +261,45 @@ public class MarkovChain<S> extends MarkovChainBase {
     /**
      * Moves the chain to the next state.
      * @return The next state.
+     *
+     * @since 1.00
      */
     public S next() {
-        history.removeFirst();
-        rawHistory.removeFirst();
+        history.remove(0);
+        rawHistory.remove(0);
 
-        final float RANDOM_NUMBER = random.nextFloat();
-        final int RAW_NEXT = rawMarkovChain.getNext(RANDOM_NUMBER, rawHistory);
+        final float randomNumber = random.nextFloat();
+        final int rawNext = rawMarkovChain.getNext(randomNumber, rawHistory);
 
-        final S NEXT = states.get(RAW_NEXT);
+        final S next = states.get(rawNext);
 
-        history.addLast(NEXT);
-        rawHistory.addLast(RAW_NEXT);
+        history.add(next);
+        rawHistory.add(rawNext);
 
-        return NEXT;
+        return next;
     }
 
     /**
      * Resets the history.
+     *
+     * @since 1.00
      */
     public void resetHistory() {
-        while(history.size() > 0) {
-            history.remove();
-            rawHistory.remove();
+        while (history.size() > 0) {
+            history.remove(0);
+            rawHistory.remove(0);
         }
-        while(history.size() <= ORDER) {
-            history.push(states.get(0));
-            rawHistory.push(0);
+        while (history.size() <= order) {
+            history.add(states.get(0));
+            rawHistory.add(0);
         }
     }
 
     /**
      * Returns the current state.
      * @return The current state.
+     *
+     * @since 1.00
      */
     public S current() {
         return history.get(history.size() - 1);
@@ -252,6 +308,8 @@ public class MarkovChain<S> extends MarkovChainBase {
     /**
      * Returns the previous state.
      * @return The previous state.
+     *
+     * @since 1.00
      */
     public S lookBack() {
         return history.get(history.size() - 2);
@@ -261,47 +319,24 @@ public class MarkovChain<S> extends MarkovChainBase {
      * Returns the nth previous state.
      * @param n How many states to look back.
      *          Input of 0 returns the current state.
-     *          0 <= n < {@link #ORDER}.
+     *          0 <= n < {@link #order}.
      * @return the nth previous state.
+     *
+     * @since 1.00
      */
     public S lookBack(final int n) {
-        final String ILLEGAL_N_MESSAGE = "Expected 0 <= n <= %s, received n = %s.";
+        final String illegalNMessage = "Expected 0 <= n <= %s, received n = %s.";
         Preconditions.checkArgument(
-                0 <= n && n <= ORDER,
-                ILLEGAL_N_MESSAGE, ORDER, n
+                0 <= n && n <= order,
+                illegalNMessage, order, n
         );
 
         return history.get(history.size() - n - 1);
     }
 
-
-    /**
-     * The states of the Markov Chain.
-     */
-    public final ImmutableList<S> states;
-
     // private /////////////////////////////////////////////////////////
 
-    /**
-     * History of states ordered from least recent to most recent.
-     * history.first() is the nth previous state, where n={@link #ORDER}
-     * history.last() is the current state.
-     */
-    private final LinkedList<S> history;
-
-    /**
-     * The state indices for the states in {@link #history},
-     * such that for all x: states.get(rawHistory(x)) == history(x)
-     */
-    private final LinkedList<Integer> rawHistory;
-
-    private final Random random;
-    private final RawMarkovChain rawMarkovChain;
-
-    private final String ALL_STATES_UNIQUE_MESSAGE =
-            "All objects in the state list should be unique.";
-
-    private final static <S> boolean allUnique(List<S> objects) {
+    private static <S> boolean  allUnique(List<S> objects) {
         Set<S> set = new HashSet<>(objects);
         return set.size() == objects.size();
     }
